test/corpus/known_issues.txt
=================================================
Handles Invalid Column Declaration
=================================================

model User {
}
id  Int

---

(program
  (model_declaration
    (identifier)
    (statement_block)
  )
  (ERROR
    (UNEXPECTED 'i')
  )
)

=================================================
Handles Invalid Column Declaration With Attribute
=================================================

model User {
}
id  Int  @id

---

(program
  (model_declaration
    (identifier)
    (statement_block)
  )
  (ERROR
    (UNEXPECTED 'i')
    (UNEXPECTED 'i')
  )
)

============================================================
Handles Invalid Column Declaration With Multiple Attributes
============================================================

model User {
}

id   Int      @id @default(autoincrement())

---

(program
  (model_declaration
    (identifier)
    (statement_block)
  )
  (ERROR
    (UNEXPECTED 'i')
    (UNEXPECTED 'i')
    (UNEXPECTED 'e')
    (UNEXPECTED 'a')
  )
)
